--- a/shopmanager/templates/purchases/purchase_page.html
+++ b/shopmanager/templates/purchases/purchase_page.html
@@ -12,7 +12,9 @@
     <script src='{{ STATIC_URL }}jquery/jquery-ui-1.8.13.min.js'></script>
     <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}jquery-table2csv-addon/jquery.table2csv.0.1.1.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}jquery/addons/jquery.generateFile.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}jquery/addons/jquery.upload.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}jquery/addons/jquery.validate.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}jquery/addons/cn_message.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}admin/js/admin/RelatedObjectLookups.js" type="text/javascript"></script>
     <style type="text/css" title="currentStyle">
 		@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
@@ -37,7 +39,10 @@
 	}
 	.table {
 	    width: 100%;
-	    margin-bottom: 18px;
+	    margin-bottom: 4px;
+	}
+	form {
+		margin-bottom:4px;
 	}
 	table {
 	    max-width: 100%;
@@ -61,6 +66,10 @@
 	    height:16px;
 	    display:inline;
 	    margin:0px 0px;
+	}
+	.head-title label{
+		font-size:24px;
+		line-height:24px;
 	}
 	.content-main{
 		margin-top:40px;
@@ -170,6 +179,24 @@
 	.clearboth{
 		clear:both;
 	}
+	#upload-area {
+		color: #B94A48;
+		background-color: #F2DEDE;
+		border-color: #EED3D7;
+    	height:26px;
+	}
+	.upload_submit{
+		float:left;
+		dispaly:inline;
+	}
+	#upload-area a{
+		float:right;
+		dispaly:inline;
+	}
+	label.error {
+	    color: red;
+	    font-weight: bold;
+	}
     </style>
   </head>
 
@@ -177,27 +204,34 @@
  <body>
 	<div class="content-main">
 		<fieldset>
-			<legend><h2 class="head-title" >采购单(NO:<label id="id_purchase" class="label label-success">{% if purchase %}{{ purchase.id }}{% endif %}</label>)</h2></legend>
+			<legend>
+			<h2 class="head-title" >采购单
+					{% if purchase %}(ID:<label id="id_purchase" class="label label-success">{{ purchase.id }}</label>,
+					状态:<label class="label label-success">{{ purchase.status }}</label>){% endif %}</h2>
+			</legend>
 			<div class="content-base-info">
+				<form id="purchase-form" method="POST" action="/purchases/add/">
+				{% csrf_token %}
+				<input type="hidden" id="purchase_id" name="purchase_id" value="{{ purchase.id }}" />
 				<table class="table table-bordered table-striped table-condensed">
 					<tr>
 						<td>
 							<label for='origin_no'>合&nbsp;&nbsp;同&nbsp;&nbsp;号</label>
-							<input type="text" id="origin_no" class="simple-text" value="{% if purchase.origin_no %}{{ purchase.origin_no }}{% endif %}"/>
+							<input type="text" id="origin_no" name="origin_no" class="simple-text" value="{{ purchase.origin_no }}"/>
 						</td>
 						<td>
 							<label for='extra_name'>标&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;题</label>
-							<input type="text" id="extra_name" class="simple-text" value="{% if purchase.extra_name %}{{ purchase.extra_name }}{% endif %}"/>
+							<input type="text" id="extra_name" name="extra_name" class="simple-text" value="{{ purchase.extra_name }}"/>
 						</td>
 						<td>
 							<label for='receiver_name'>收&nbsp;&nbsp;货&nbsp;&nbsp;人</label>
-							<input type="text" id="receiver_name" class="simple-text" value="{% if purchase.receiver_name %}{{ purchase.receiver_name }}{% endif %}"/>
+							<input type="text" id="receiver_name" name="receiver_name" class="simple-text" value="{{ purchase.receiver_name }}"/>
 						</td>
 					</tr>
 					<tr>
 						<td>
-							<label for='supplier'>供&nbsp;&nbsp;应&nbsp;&nbsp;商</label>
-							<select id='supplier'>
+							<label for='supplier_id'>供&nbsp;&nbsp;应&nbsp;&nbsp;商</label>
+							<select id="supplier_id" name='supplier_id' >
 								<option value='' >----请选择----</option>
 								{% for supplier in  suppliers %}
 								<option value='{{ supplier.id }}' {% if purchase.supplier_id == supplier.id %}selected{% endif %}>{{ supplier.supplier_name }}</option>
@@ -207,8 +241,8 @@
 							 <img src="{{ STATIC_URL }}admin/img/icon_addlink.gif" width="10" height="10" alt="创建"></a>
 						</td>
 						<td>
-							<label for='deposite'>仓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;库</label>
-							<select id='deposite'>
+							<label for='deposite_id'>仓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;库</label>
+							<select id="deposite_id" name='deposite_id'>
 								<option value='' >----请选择----</option>
 								{% for deposite in  deposites %}
 								<option value='{{ deposite.id }}' {% if purchase.deposite_id == deposite.id %}selected{% endif %}>{{ deposite.deposite_name}}</option>
@@ -218,8 +252,8 @@
 							 <img src="{{ STATIC_URL }}admin/img/icon_addlink.gif" width="10" height="10" alt="创建"></a>
 						</td>
 						<td>
-							<label for='purchase_type'>采购类型</label>
-							<select id='purchase_type'>
+							<label for='purchase_type_id'>采购类型</label>
+							<select id="purchase_type_id" name='purchase_type_id'>
 								<option value='' >----请选择----</option>
 								{% for purchase_type in  purchase_types %}
 								<option value='{{ purchase_type.id }}' {% if purchase.purchase_type_id == purchase_type.id %}selected{% endif %}>{{ purchase_type.type_name }}</option>
@@ -232,27 +266,37 @@
 					<tr>
 						<td>
 							<label for='service_date'>业务日期</label>
-							<input type="text" id="service_date" class="simple-text" value="{% if purchase.service_date %}{{ purchase.service_date }}{% endif %}"/>
+							<input type="text" id="service_date" name="service_date" class="simple-text" value="{% if purchase.service_date %}{{ purchase.service_date }}{% endif %}"/>
 						</td>
 						<td>
 							<label for='forecast_date'>预计到货日期</label>
-							<input type="text" id="forecast_date" class="simple-text" value="{% if purchase.forecast_date %}{{ purchase.forecast_date }}{% endif %}"/>
+							<input type="text" id="forecast_date" name="forecast_date" class="simple-text" value="{% if purchase.forecast_date %}{{ purchase.forecast_date }}{% endif %}"/>
 						</td>
-						<td></td>
+						<td>
+							<label for='prepay_cent'>预付比例</label>
+							<input type="text" id="prepay_cent" name="prepay_cent" class="simple-text required" value="{{ purchase.prepay_cent }}"/>
+						</td>
 					</tr>
 					<tr>
-					
 						<td colspan="2">
-							<label for='extra_info'>备&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注</label>
-							<textarea id="extra_info" style="width:400px;" rows="2" cols="240">{{ purchase.extra_info }}</textarea>
+							<label for='extra_info'>备注</label>
+							<textarea id="extra_info" style="width:400px;" name="extra_info" rows="2" cols="200">{{ purchase.extra_info }}</textarea>
 						</td>
 						<td style="text-align:center;padding-top:20px;">
-							<button id="save_purchase" class="btn btn-primary">保存 +</button>
+							<input type="submit" class="btn btn-primary" value="保存 +"/>
 							<button id="check_purchase"  {% if perms.can_check_purchase %}class="btn btn-primary"{% else %}class="btn btn-inverse" disabled="disabled"{% endif %}>审核</button>
 							{% if perms.can_show_storage %}<a href="{% if purchase %}/purchases/ship/{{ purchase.id }}/{% else %}#{% endif %}">入库详细</a>{% endif %}
 						</td>
 					</tr>
 				</table>
+				</form>
+				{% if purchase %}
+				<div id="upload-area" >
+					<div class="upload_submit"><button id="attach_files" class="btn btn-small btn-info">上传文件</button></div>
+					<a id="attach_file_url" href="{% if purchase.attach_files %}/download/purchase/{{ purchase.attach_files }}{% else %}#{% endif %}">{{ purchase.attach_files }}</a>
+				</div>
+				{% endif %}
+				<div class="clearboth"></div>
 			</div>
 			<div class="panel-body">
 				<div class="panel-content">
@@ -365,5 +409,36 @@
 <script src="{{ STATIC_URL }}script/purchase/purchase.js"></script>
 <script type="text/javascript">
 	new purchase.Manager();
+	$(document).ready(function(){
+		if ($("#purchase_id").val()){
+			$("#attach_files").upload({
+		        name: 'attach_files',
+		        action: '/purchases/upload/'+$('#purchase_id').val()+'/',
+		        enctype: 'multipart/form-data',
+		        //params: {},
+		        autoSubmit: true,
+		        //onSubmit: function() {},
+		        onComplete: function(e) {
+		        	var res = $.parseJSON(e);
+		        	if ( res.code == 0 ){
+		        		var filename = res.response_content.filename;
+		        		$('#attach_file_url').attr('href','/download/purchase/'+filename);
+		        		$('#attach_file_url').html(filename);
+		        	}else{
+		        		alert('上传失败!');
+		        	}
+		        },
+		        //onSelect: function() {}
+			});
+		}
+	});
+	$("#purchase-form").validate({rules: {
+			extra_name: 'required',
+			receiver_name: 'required',
+			supplier_id: 'required',
+			deposite_id: 'required',
+			service_date: 'required',
+            prepay_cent: {required:true,number:true,max:1},
+     },});
 </script>
 </html>
