--- a/shopmanager/templates/purchases/purchase_storage_page.html
+++ b/shopmanager/templates/purchases/purchase_storage_page.html
@@ -12,7 +12,9 @@
     <script src='{{ STATIC_URL }}jquery/jquery-ui-1.8.13.min.js'></script>
     <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}jquery-table2csv-addon/jquery.table2csv.0.1.1.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}jquery/addons/jquery.generateFile.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}jquery/addons/jquery.upload.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}jquery/addons/jquery.validate.min.js" type="text/javascript"></script>
+	<script src="{{ STATIC_URL }}jquery/addons/cn_message.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}admin/js/admin/RelatedObjectLookups.js" type="text/javascript"></script>
     <style type="text/css" title="currentStyle">
 		@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
@@ -37,13 +39,16 @@
 	}
 	.table {
 	    width: 100%;
-	    margin-bottom: 18px;
+	    margin-bottom:4px;
 	}
 	table {
 	    max-width: 100%;
 	    background-color: white;
 	    border-collapse: collapse;
 	    border-spacing: 0;
+	}
+	form {
+		margin-bottom:4px;
 	}
 	tr {
 	    display: table-row;
@@ -74,7 +79,6 @@
 		display:inline;
 		margin:0px 10px;
 	}
-	
 	select {
 		width:130px;
 		display:inline;
@@ -112,7 +116,10 @@
 	textarea{
 		margin-bottom:2px;
 	}
-
+	.head-title label{
+		font-size:24px;
+		line-height:24px;
+	}
 	.product-search input[type="text"]{
 		width:250px;
 		margin-bottom:18px;
@@ -177,6 +184,20 @@
 	.clearboth{
 		clear:both;
 	}
+	#upload-area {
+		color: #B94A48;
+		background-color: #F2DEDE;
+		border-color: #EED3D7;
+    	height:26px;
+	}
+	.upload_submit{
+		float:left;
+		dispaly:inline;
+	}
+	#upload-area a{
+		float:right;
+		dispaly:inline;
+	}
     </style>
   </head>
 
@@ -184,37 +205,41 @@
  <body>
 	<div class="content-main">
 		<fieldset>
-			<legend><h2 class="head-title" >采购入库单(NO:<label id="id_purchase_storage" class="label label-success">{% if purchase_storage %}{{ purchase_storage.id }}{% endif %}</label>)</h2></legend>
+			<legend><h2 class="head-title" >采购入库单
+					{% if purchase_storage %}(NO:<label id="id_purchase_storage" class="label label-success">{{ purchase_storage.id }}</label>,
+					状态:<label class="label label-success">{{ purchase_storage.status }}</label>){% endif %}</h2></legend>
 			<div class="content-base-info">
+				<form method="POST" id="storage-form" action="/purchases/storage/add/">
+				{% csrf_token %}
+				<input type="hidden" id="purchase_storage_id" name="purchase_storage_id" value="{{ purchase_storage.id }}" />
 				<table class="table table-bordered table-striped table-condensed">
 					<tr>
 						<td>
-							<label for='origin_no'>原&nbsp;&nbsp;始&nbsp;&nbsp;单&nbsp;&nbsp;号</label>
-							<input type="text" id="origin_no" class="simple-text" value="{% if purchase_storage.origin_no %}{{ purchase_storage.origin_no }}{% endif %}"/>
+							<label for='origin_no'>原始单号</label>
+							<input type="text" id="origin_no" name="origin_no" class="simple-text" value="{% if purchase_storage.origin_no %}{{ purchase_storage.origin_no }}{% endif %}"/>
 						</td>
-						<td colspan="2">
-							<label for='extra_name'>标&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;题</label>
-							<input type="text" id="extra_name" class="simple-text" value="{% if purchase_storage.extra_name %}{{ purchase_storage.extra_name }}{% endif %}"/>
+						<td colspan="1">
+							<label for='extra_name'>标&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;题</label>
+							<input type="text" id="extra_name" name="extra_name" class="simple-text required" value="{% if purchase_storage.extra_name %}{{ purchase_storage.extra_name }}{% endif %}"/>
 						</td>
-						
-					</tr>
-					<tr>
 						<td>
-							<label for='supplier'>供&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;应&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;商</label>
-							<select id='supplier'>
+							<label for='supplier_id'>供应商</label>
+							<select id='supplier_id' name="supplier_id" >
 								<option value='' >----请选择----</option>
 								{% for supplier in  suppliers %}
 								<option value='{{ supplier.id }}' {% if purchase_storage.supplier_id == supplier.id %}selected{% endif %}>{{ supplier.supplier_name }}</option>
 								{% endfor %}
 							</select>
 							<a href="/admin/archives/supplier/add/" class="add-another" id="add_id_supplier" onclick="return showAddAnotherPopup(this);">
-							 <img src="{{ STATIC_URL }}admin/img/icon_addlink.gif" width="10" height="10" alt="创建"></a>
+							<img src="{{ STATIC_URL }}admin/img/icon_addlink.gif" width="10" height="10" alt="创建"></a>
 						</td>
+					</tr>
+					<tr>
 						<td>
-							<label for='deposite'>仓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;库</label>
-							<select id='deposite'>
+							<label for='deposite_id'>仓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;库</label>
+							<select id='deposite_id' name="deposite_id">
 								<option value='' >----请选择----</option>
-								{% for deposite in  deposites %}
+								{% for deposite in deposites %}
 								<option value='{{ deposite.id }}' {% if purchase_storage.deposite_id == deposite.id %}selected{% endif %}>{{ deposite.deposite_name}}</option>
 								{% endfor %}
 							</select>
@@ -223,34 +248,31 @@
 						</td>
 						<td>
 							<label for='forecast_date'>预计到货日期</label>
-							<input type="text" id="forecast_date" class="simple-text" value="{% if purchase_storage.forecast_date %}{{ purchase_storage.forecast_date }}{% endif %}"/>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<label for='post_date'>实际到货日期</label>
-							<input type="text" id="post_date" class="simple-text" value="{% if purchase_storage.post_date %}{{ purchase_storage.post_date }}{% endif %}"/>
+							<input type="text" id="forecast_date" name="forecast_date" class="simple-text" value="{% if purchase_storage.forecast_date %}{{ purchase_storage.forecast_date }}{% endif %}"/>
 						</td>
 						<td>
-							<label for='logistic_company'>物流公司</label>
-							<input type="text" id="logistic_company"  value="{% if purchase_storage.logistic_company %}{{ purchase_storage.logistic_company }}{% endif %}"/>
-						</td>
-						<td>
-							<label for='out_sid'>物&nbsp;&nbsp;流&nbsp;&nbsp;单&nbsp;&nbsp;号</label>
-							<input type="text" id="out_sid"  value="{% if purchase_storage.out_sid %}{{ purchase_storage.out_sid }}{% endif %}"/>
+							<label for='is_pod'><input type="checkbox" id="is_pod" name="is_pod" class="simple-text" {% if purchase_storage.is_pod %}checked{% endif %}/>&nbsp;&nbsp;需付款提货</label>
 						</td>
 					</tr>
 					<tr>
 						<td colspan="2">
 							<label for='extra_info'>备&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注</label>
-							<textarea id="extra_info"  rows="2" cols="120" style="width:360px;">{{ purchase_storage.extra_info }}</textarea>
+							<textarea id="extra_info" name="extra_info" rows="2" cols="120" style="width:360px;">{{ purchase_storage.extra_info }}</textarea>
 						</td>
 						<td style="text-align:center;padding-top:20px;">
-							<button id="save_purchase" class="btn btn-primary">保存 +</button>
+							<input type="submit" class="btn btn-primary" value="保存 +"/>
 							<a href="{% if purchase_storage %}/purchases/storage/distribute/{{ purchase_storage.id }}/{% else %}#{% endif %}">关联采购单</a>
 						</td>
 					</tr>
 				</table>
+				</form>
+				{% if purchase_storage %}
+				<div id="upload-area" >
+					<div class="upload_submit"><button id="attach_files" class="btn btn-small btn-info">上传文件</button></div>
+					<a id="attach_file_url" href="{% if purchase_storage.attach_files %}/download/purchase/{{ purchase_storage.attach_files }}{% else %}#{% endif %}">{{ purchase_storage.attach_files }}</a>
+				</div>
+				{% endif %}
+				<div class="clearboth"></div>
 			</div>
 			<div class="panel-body">
 				<div class="panel-content">
@@ -359,5 +381,33 @@
 <script src="{{ STATIC_URL }}script/purchase/purchasestorage.js"></script>
 <script type="text/javascript">
 	new purchasestorage.Manager();
+	$(document).ready(function(){
+		if ($("#purchase_storage_id").val()){
+			$("#attach_files").upload({
+		        name: 'attach_files',
+		        action: '/purchases/storage/upload/'+$('#purchase_storage_id').val()+'/',
+		        enctype: 'multipart/form-data',
+		        //params: {},
+		        autoSubmit: true,
+		        //onSubmit: function() {},
+		        onComplete: function(e) {
+		        	var res = $.parseJSON(e);
+		        	if ( res.code == 0 ){
+		        		var filename = res.response_content.filename;
+		        		$('#attach_file_url').attr('href','/download/purchase/'+filename);
+		        		$('#attach_file_url').html(filename);
+		        	}else{
+		        		alert('上传失败!');
+		        }},
+		        //onSelect: function() {}
+			});
+		}
+	});
+	$("#storage-form").validate({rules: {
+			extra_name: 'required',
+			supplier_id: 'required',
+			deposite_id: 'required',
+			forecast_date: 'required'
+     },});
 </script>
 </html>
