--- a/shopmanager/templates/purchases/purchase_page.html
+++ b/shopmanager/templates/purchases/purchase_page.html
@@ -7,6 +7,7 @@
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
     <link href='{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css' rel='stylesheet'  />
+    <link href='{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.min.css' rel='stylesheet'  />
     <script src="{{ STATIC_URL }}closure-library/closure/goog/base.js"></script>
     <script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js" type="text/javascript"></script>
     <script src='{{ STATIC_URL }}jquery/jquery-ui-1.8.13.min.js'></script>
@@ -15,6 +16,8 @@
     <script src="{{ STATIC_URL }}jquery/addons/jquery.upload.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}jquery/addons/jquery.validate.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}jquery/addons/cn_message.js" type="text/javascript"></script>
+    <link href='{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.min.css' rel='stylesheet'  />
+    <script src="{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.jquery.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}admin/js/admin/RelatedObjectLookups.js" type="text/javascript"></script>
     <style type="text/css" title="currentStyle">
 		@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
@@ -78,14 +81,12 @@
 	.content-base-info {
 		display:fixed;
 	}
-	
 	label{
 		display:inline;
 		margin:0px 10px;
 	}
-	
 	select {
-		width:130px;
+		width:200px;
 		display:inline;
 		margin-bottom:2px;
 	}
@@ -114,7 +115,7 @@
 		margin-bottom:0px;
 	}
 	input[type="text"]{
-		width:120px;
+		width:200px;
 		margin-bottom:2px;
 		height:16px;
 	}
@@ -231,7 +232,7 @@
 					<tr>
 						<td>
 							<label for='supplier_id'>供&nbsp;&nbsp;应&nbsp;&nbsp;商</label>
-							<select id="supplier_id" name='supplier_id' >
+							<select id="supplier_id" name='supplier_id' class="chosen-select">
 								<option value='' >----请选择----</option>
 								{% for supplier in  suppliers %}
 								<option value='{{ supplier.id }}' {% if purchase.supplier_id == supplier.id %}selected{% endif %}>{{ supplier.supplier_name }}</option>
@@ -242,7 +243,7 @@
 						</td>
 						<td>
 							<label for='deposite_id'>仓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;库</label>
-							<select id="deposite_id" name='deposite_id'>
+							<select id="deposite_id" name='deposite_id' class="chosen-select">
 								<option value='' >----请选择----</option>
 								{% for deposite in  deposites %}
 								<option value='{{ deposite.id }}' {% if purchase.deposite_id == deposite.id %}selected{% endif %}>{{ deposite.deposite_name}}</option>
@@ -253,7 +254,7 @@
 						</td>
 						<td>
 							<label for='purchase_type_id'>采购类型</label>
-							<select id="purchase_type_id" name='purchase_type_id'>
+							<select id="purchase_type_id" name='purchase_type_id' class="chosen-select">
 								<option value='' >----请选择----</option>
 								{% for purchase_type in  purchase_types %}
 								<option value='{{ purchase_type.id }}' {% if purchase.purchase_type_id == purchase_type.id %}selected{% endif %}>{{ purchase_type.type_name }}</option>
@@ -440,5 +441,6 @@
 			service_date: 'required',
             prepay_cent: {required:true,number:true,max:1},
      },});
+     $('.chosen-select').chosen({search_contains:true});
 </script>
 </html>
