--- a/shopmanager/templates/purchases/purchase_payment_page.html
+++ b/shopmanager/templates/purchases/purchase_payment_page.html
@@ -5,6 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
      <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+    <script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js" type="text/javascript"></script>
+    <link href='{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.min.css' rel='stylesheet'  />
+    <script src="{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.jquery.min.js" type="text/javascript"></script>
     <style type="text/css">
     body,div{
     	margin:0px auto;
@@ -69,7 +72,7 @@
 			    <label class="control-label" for="payType">付款类型</label>
 			    <div class="controls">
 			      <select id="payType" name="paytype">
-			      	<option value="">----请选择----</option>
+			      	<option value="">选择付款类型</option>
 			      	<option value="POP">预付款</option>
 					<option value="POD">付款提货</option>
 					<option value="COD">货到付款</option>
@@ -80,10 +83,10 @@
 			  <div class="control-group">
 			    <label class="control-label" for="purchase">采购单</label>
 			    <div class="controls">
-			      <select id="purchase" name="purchase">
-			      	<option value="">----请选择----</option>
+			      <select id="purchase" name="purchase" class="chosen-select">
+			      	<option value="">选择采购单</option>
 					{% for purchase in purchases %}
-					<option value="{{ purchase.id }}">{{ purchase.origin_no }}|{{ purchase.service_date|date:"y-n-j" }}|{{ purchase.extra_name }}</option>
+					<option value="{{ purchase.id }}">{{ purchase.origin_no }}&nbsp;{{ purchase.service_date|date:"y-n-j" }}&nbsp;{{ purchase.extra_name }}</option>
 					{% endfor %}
 			      </select>
 			    </div>
@@ -91,10 +94,9 @@
 			  <div class="control-group">
 			    <label class="control-label" for="storage">入库单</label>
 			    <div class="controls">
-			      <select size="8" id="storage" name="storage" multiple="multiple">
-			      	<option value="">----请选择----</option>
+			      <select size="8" id="storage" name="storage" multiple="multiple" class="chosen-select" data-placeholder="选择入库单">
 			      	{% for storage in storages %}
-					<option value="{{ storage.id }}">{{ storage.origin_no }}|{{ storage.post_date|date:"y-n-j" }}|{{ storage.extra_name }}</option>
+					<option value="{{ storage.id }}">{{ storage.origin_no }}&nbsp;{{ storage.post_date|date:"y-n-j" }}&nbsp;{{ storage.extra_name }}</option>
 					{% endfor %}
 			      </select>
 			    </div>
@@ -122,4 +124,7 @@
 	</div>
 </body>
 {% endwith %}
+<script type="text/javascript">
+	$('.chosen-select').chosen({enable_split_word_search:true,search_contains:true});
+</script>
 </html>
