--- a/shopmanager/templates/purchases/purchase_storage_page.html
+++ b/shopmanager/templates/purchases/purchase_storage_page.html
@@ -16,6 +16,8 @@
     <script src="{{ STATIC_URL }}jquery/addons/jquery.validate.min.js" type="text/javascript"></script>
 	<script src="{{ STATIC_URL }}jquery/addons/cn_message.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}admin/js/admin/RelatedObjectLookups.js" type="text/javascript"></script>
+    <link href='{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.min.css' rel='stylesheet'  />
+    <script src="{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.jquery.min.js" type="text/javascript"></script>
     <style type="text/css" title="currentStyle">
 		@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
 		@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
@@ -224,7 +226,7 @@
 						</td>
 						<td>
 							<label for='supplier_id'>供应商</label>
-							<select id='supplier_id' name="supplier_id" >
+							<select id='supplier_id' name="supplier_id" class="chosen-select">
 								<option value='' >----请选择----</option>
 								{% for supplier in  suppliers %}
 								<option value='{{ supplier.id }}' {% if purchase_storage.supplier_id == supplier.id %}selected{% endif %}>{{ supplier.supplier_name }}</option>
@@ -237,7 +239,7 @@
 					<tr>
 						<td>
 							<label for='deposite_id'>仓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;库</label>
-							<select id='deposite_id' name="deposite_id">
+							<select id='deposite_id' name="deposite_id" class="chosen-select">
 								<option value='' >----请选择----</option>
 								{% for deposite in deposites %}
 								<option value='{{ deposite.id }}' {% if purchase_storage.deposite_id == deposite.id %}selected{% endif %}>{{ deposite.deposite_name}}</option>
@@ -409,5 +411,6 @@
 			deposite_id: 'required',
 			forecast_date: 'required'
      },});
+     $('.chosen-select').chosen({search_contains:true});
 </script>
 </html>
