--- a/shopmanager/templates/purchases/purchase_page.html
+++ b/shopmanager/templates/purchases/purchase_page.html
@@ -3,11 +3,7 @@
   <head>
     <title>创建采购单</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
-    <link href='{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css' rel='stylesheet'  />
-    <link href='{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.min.css' rel='stylesheet'  />
     <script src="{{ STATIC_URL }}closure-library/closure/goog/base.js"></script>
     <script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js" type="text/javascript"></script>
     <script src='{{ STATIC_URL }}jquery/jquery-ui-1.8.13.min.js'></script>
@@ -16,12 +12,15 @@
     <script src="{{ STATIC_URL }}jquery/addons/jquery.upload.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}jquery/addons/jquery.validate.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}jquery/addons/cn_message.js" type="text/javascript"></script>
-    <link href='{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.min.css' rel='stylesheet'  />
     <script src="{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.jquery.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}admin/js/admin/RelatedObjectLookups.js" type="text/javascript"></script>
     <style type="text/css" title="currentStyle">
+    	@import "{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css";
+		@import "{{ STATIC_URL }}bootstrap/css/bootstrap.min.css";
+		@import "{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css";
 		@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
 		@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
+		@import "{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.min.css";
     </style>  
     <style type="text/css">
     body,div{
