fix purchase models and page and task settings

--- a/shopmanager/templates/purchases/purchase_storage_page.html
+++ b/shopmanager/templates/purchases/purchase_storage_page.html
@@ -221,7 +221,7 @@
 							<input type="text" id="origin_no" name="origin_no" class="simple-text" value="{% if purchase_storage.origin_no %}{{ purchase_storage.origin_no }}{% endif %}"/>
 						</td>
 						<td colspan="1">
-							<label for='extra_name'>标&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;题</label>
+							<label for='extra_name'>标&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;题</label>
 							<input type="text" id="extra_name" name="extra_name" class="simple-text required" value="{% if purchase_storage.extra_name %}{{ purchase_storage.extra_name }}{% endif %}"/>
 						</td>
 						<td>
