add export products.py and fix direct ,exchange trade js

--- a/shopmanager/templates/purchases/purchase_storage_page.html
+++ b/shopmanager/templates/purchases/purchase_storage_page.html
@@ -200,6 +200,10 @@
 		float:right;
 		dispaly:inline;
 	}
+	label.error {
+	    color: red;
+	    font-weight: bold;
+	}
     </style>
   </head>
 
