--- a/shopmanager/templates/trades/direct_trade_template.html
+++ b/shopmanager/templates/trades/direct_trade_template.html
@@ -7,6 +7,8 @@
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
     <script src="{{ STATIC_URL }}script/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}jquery/addons/jquery.validate.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}jquery/addons/cn_message.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}closure-library/closure/goog/base.js"></script>
     <style type="text/css">
     body,div{
@@ -77,6 +79,11 @@
 		height:20px;
 		display:fixed;
 	}
+	
+	label.error {
+	    color: red;
+	    font-weight: bold;
+	}
     </style>
   </head>
 {% load trade_tags %} 
@@ -87,36 +94,39 @@
 			<legend><h1 class="head-title" >{% if trade.type == "direct" %}内售{% elif trade.type == "reissue" %}补发{% endif %}订单</h1></legend>
 			
 			<div class="content-base-info">
+				<form method="POST" id="trade-form" action="/trades/direct/add/">
 				<div>
-					<input type="hidden" id="id_direct_trade" value="{{ trade.id }}" />
-					<input type="hidden" id="id_trade_type" value="{{ trade.type }}" />
+					<input type="hidden" id="id_direct_trade" name="trade_id" value="{{ trade.id }}" />
+					<input type="hidden" id="id_trade_type" name="type" value="{{ trade.type }}" />
 				</div>
 				<table class="table table-bordered table-striped table-condensed">
 					<tr>
 						<td>所属店铺:</td>
 						<td>
-							<select id="id_seller_id" class="selection" style="width:130px;">
+							<select id="id_seller_id" name="sellerId" class="selection" style="width:130px;">
 								<option value='' >-------请选择-------</option>
 								{% for seller in sellers %}
-								<option value='{{ seller.id }}' >{{ seller.nick }}</option>
+								<option value='{{ seller.id }}' {% if trade.user.id == seller.id %}selected{% endif %} >{{ seller.nick }}</option>
 								{% endfor %}
 							</select>
 						</td>
-						<td>会员昵称:</td><td><input type="text" id="id_buyer_nick" class="simple-text" /></td>
-						<td>手机:</td><td><input type="text" id="id_receiver_mobile" class="simple-text" /></td>
-						<td>固话:</td><td><input type="text" id="id_receiver_phone" class="simple-text" /></td>
+						<td>会员昵称:</td><td><input type="text" id="id_buyer_nick"   name="buyer_nick" class="simple-text" value="{{ trade.buyer_nick }}" /></td>
+						<td>手机:</td><td><input type="text" id="id_receiver_mobile" name="receiver_mobile" class="simple-text" value="{{ trade.receiver_mobile }}" /></td>
+						<td>固话:</td><td><input type="text" id="id_receiver_phone"  name="receiver_phone" class="simple-text" value="{{ trade.receiver_phone }}" /></td>
 					</tr>
 					<tr>
-						<td>收货人:</td><td><input type="text" id="id_receiver_name" class="simple-text" /></td>
-						<td>省:</td><td><input type="text" id="id_receiver_state" class="simple-text" /></td>
-						<td>市:</td><td><input type="text" id="id_receiver_city" class="simple-text" /></td>
-						<td>区:</td><td><input type="text" id="id_receiver_district" class="simple-text" /></td>
+						<td>收货人:</td><td><input type="text" id="id_receiver_name"  name="receiver_name" class="simple-text" value="{{ trade.receiver_name }}" /></td>
+						<td>省:</td><td><input type="text" id="id_receiver_state" name="receiver_state" class="simple-text" value="{{ trade.receiver_state }}" /></td>
+						<td>市:</td><td><input type="text" id="id_receiver_city" name="receiver_city" class="simple-text" value="{{ trade.receiver_city }}" /></td>
+						<td>区:</td><td><input type="text" id="id_receiver_district" name="receiver_district" class="simple-text" value="{{ trade.receiver_district }}" /></td>
 					</tr>
 					<tr>
-						<td>详细地址:</td><td colspan="3"><input type="text" id="id_receiver_address" class="simple-text" style="width:400px;" /></td>
+						<td>详细地址:</td><td colspan="3">
+						<input type="text" id="id_receiver_address" name="receiver_address" class="simple-text" style="width:400px;" value="{{ trade.receiver_address }}" />
+						</td>
 						{% if trade.type == "direct" %}
-						<td>实付:</td><td><input type="text" id="id_payment" class="simple-text" /></td>
-						<td>邮费:</td><td><input type="text" id="id_post_fee" class="simple-text" /></td>
+						<td>实付:</td><td><input type="text" id="id_payment" name="payment" class="simple-text" value="{{ trade.payment }}" /></td>
+						<td>邮费:</td><td><input type="text" id="id_post_fee" name="post_fee" class="simple-text" value="{{ trade.post_fee }}" /></td>
 						{% else %}
 						<td colspan="4"></td>
 						{% endif %}
@@ -124,11 +134,12 @@
 					<tr>
 						<td colspan="6"></td>
 						<td colspan="2">
-							<button id="id_save_trade" class="btn btn-small btn-success">保存 +</button>&nbsp;&nbsp;
+							<input type="submit" class="btn btn-small btn-success" value="{% if trade.sys_status == 'WAIT_AUDIT' %}修改{% else %}保存 +{% endif %}" />&nbsp;&nbsp;
 							<a href="/admin/trades/mergetrade/?q={{ trade.id }}&type__exact={{ trade.type }}" class="btn btn-small btn-success">审核 -></a>
 						</td>
 					</tr>
 				</table>
+				</form>
 			</div>
 			<hr/>
 			<div class="order-content">
@@ -212,5 +223,16 @@
 <script src="{{ STATIC_URL }}script/trades/direct_trade.js"></script>
 <script type="text/javascript">
 	 new direct.Manager();
+	 $("#trade-form").validate({rules: {
+			trade_id: {required:true,number:true},
+			sellerId: {required:true,number:true},
+			buyer_nick: {required:true},
+			receiver_name: {required:true},
+			receiver_state: {required:true},
+			receiver_city: {required:true},
+			receiver_address: {required:true},
+			payment: {required:true,number:true},
+			post_fee: {required:true,number:true},
+     },});
 </script>
 </html>
