fix template admin index.html

--- a/shopmanager/templates/admin/index.html
+++ b/shopmanager/templates/admin/index.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-<div id="content-main" style="float:left;display:inline;width:30%;">
+<div id="content-main" style="float:left;display:inline;width:25%;">
 
 {% if app_list %}
     {% for app in app_list %}
@@ -49,7 +49,36 @@
 {% endblock %}
 
 {% block sidebar %}
-<div class="content-calendar" style="float:left;margin-left:10px;display:inline;width:56%;">
+<div class="content-calendar" style="float:left;margin-left:10px;display:inline;width:60%;">
 	{% include "fullcalendar/default.html" %}
+</div>
+<div id="content-related" style="margin-right:-1em;width: 15em;">
+    <div class="module" id="recent-actions-module">
+        <h2>{% trans '最近操作记录' %}</h2>
+        <h3>{% trans '我的记录' %}</h3>
+            {% load log %}
+            {% get_admin_log 10 as admin_log for_user user %}
+            {% if not admin_log %}
+            <p>{% trans 'None available' %}</p>
+            {% else %}
+            <ul class="actionlist">
+            {% for entry in admin_log %}
+            <li class="{% if entry.is_addition %}addlink{% endif %}{% if entry.is_change %}changelink{% endif %}{% if entry.is_deletion %}deletelink{% endif %}">
+                {% if entry.is_deletion or not entry.get_admin_url %}
+                    {{ entry.object_repr }}
+                {% else %}
+                    <a href="{{ entry.get_admin_url }}">{{ entry.object_repr }}</a>
+                {% endif %}
+                <br/>
+                {% if entry.content_type %}
+                    <span class="mini quiet">{% filter capfirst %}{% trans entry.content_type.name %}{% endfilter %}</span>
+                {% else %}
+                    <span class="mini quiet">{% trans 'Unknown content' %}</span>
+                {% endif %}
+            </li>
+            {% endfor %}
+            </ul>
+            {% endif %}
+    </div>
 </div>
 {% endblock %}
