--- a/shopmanager/templates/trades/send_trade_reponse.html
+++ b/shopmanager/templates/trades/send_trade_reponse.html
@@ -22,7 +22,7 @@
 		}
 		.label {
 			font-size:23px;
-			font-color:white;
+			font-color:black;
 			height:25px;
 			
 		}
@@ -32,7 +32,7 @@
 	<div class="container">
 		<input id="task_id" type="hidden" value="{{ task_id }}" />
 		<input id="replay_id" type="hidden" value="{{ replay_id }}" />
-		<button id="task-status" class="btn btn-large btn-success">
+		<button id="task-status" class="btn btn-large btn-primary">
 			批次编号:{{ replay_id }}。等待任务完成，倒计时<label id="task_counter_id" class="label label-info">100</label>秒
 		</button>
 	</div>
