fix shopback items admin.py

--- a/shopmanager/templates/admin/base_site.html
+++ b/shopmanager/templates/admin/base_site.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }} | {% trans "优尼世界" %}{% endblock %}
+{% block title %}{{ title }} | {% trans "互一云计算电子商务管理系统" %}{% endblock %}
 
 {% block extrastyle %}
 <style>
@@ -16,7 +16,7 @@ a.section:link, a.section:visited { color: #666666; }
 {% endblock %}
 
 {% block branding %}
-<h1 id="site-name" > {% trans "优尼世界淘宝后台管理系统" %}</h1>
+<h1 id="site-name" > {% trans "互一云计算电子商务后台管理系统" %}</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
