item warn product num fix

--- a/shopmanager/templates/admin/items/change_list.html
+++ b/shopmanager/templates/admin/items/change_list.html
@@ -64,6 +64,10 @@
               </a>
             </li>
             <li>
+              <a href="/items/product/warn/" class="addlink" target="_blank">库存警告
+              </a>
+            </li>
+            <li>
               <a href="{% url cl.opts|admin_urlname:'add' %}{% if is_popup %}?_popup=1{% endif %}" class="addlink">
                 {% blocktrans with cl.opts.verbose_name as name %}新{{ name }}{% endblocktrans %}
               </a>
