--- a/shopmanager/shopback/items/templates/items/product_stock_warn.html
+++ b/shopmanager/shopback/items/templates/items/product_stock_warn.html
@@ -60,7 +60,7 @@
   </head>
   <body>
 	<div class="container">
-		<div><h3>实际库存数低于预留数商品规格列表（实际库存数=库存数-待发数）</h3></div>
+		<div><h3>警告库存商品列表 <span style="color:red;font-size:16px;">[判断条件：实际库存数（等于 库存数-待发数) <= 预留数]</span></h3></div>
 		<table class="table table-bordered table-striped table-condensed">
 			<tr>
 				<th>序号</th>
@@ -71,7 +71,7 @@
 				<th>系统属性</th>
 				<th>库存数</th>
 				<th>待发数</th>
-				<th>预留库存数</th>
+				<th>预留数</th>
 			</tr>
 			{% for item in object.warn_skus %}
 			<tr>
