--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -14,7 +14,8 @@
 </div>
 <div class="row-through">
 <div class="alert-message buyer"><strong>买家留言: </strong>{{ trade.buyer_message }}</div>
-<div class="alert-message seller"><strong>卖家留言: </strong>{{ trade.seller_memo }} {{ trade.sys_memo }}</div>
+<div class="alert-message seller"><strong>卖家留言: </strong>{{ trade.seller_memo }}</div>
+<div class="alert-message sys"><strong>系统备注: </strong>{{ trade.sys_memo }}</div>
 </div>
 <div style="padding: 9px 15px">
 <label class="simple-label">物流方式:</label>   
